k8s/base/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      app: plex
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
        tier: backend
        track: stable
    spec:
      containers:
      - name: plex
        image: linuxserver/plex:1.24.5
        volumeMounts:
        - name: plex-persistent-storage
          mountPath: /config
          subPath: plex/config
        - name: plex-persistent-storage
          mountPath: /tv
          subPath: tv/
        - name: plex-persistent-storage
          mountPath: /movies
          subPath: movies/
      volumes:
      - name: plex-persistent-storage
        persistentVolumeClaim:
          claimName: home-server-pvc
