k8s/base/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
    tier: backend
  ports:
  - protocol: TCP
    port: 32400
